# backend/src/swagger.json
@@ -115,6 +115,39 @@
         }
       }
     },
+    "/api/v1/bugs/messages/{user}": {
+      "get": {
+        "tags": ["bugs"],
+        "summary": "Request Trak resolve user profile messages by id.",
+        "description": "A request for Trak Resolve users to see user messages.",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "user",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/v1/bugs/{id}": {
       "get": {
         "tags": ["bugs"],
@@ -305,26 +338,57 @@
         }
       }
     },
-    "/api/v1/bugs/messages/{user}": {
-      "get": {
-        "tags": ["users"],
-        "summary": "Request Trak resolve user profile messages by id.",
-        "description": "A request for Trak Resolve users to see user messages.",
-        "produces": ["application/json"],
+    "api/v1/bugs/assign/:id": {
+      "put": {
+        "tags": ["bugs"],
+        "summary": "Assign Trak resolve bug reports.",
+        "description": "A request for the Trak Resolve development team to assign bug reports based on ID.",
+        "consumes": ["text/plain; charset=utf-8"],
         "parameters": [
           {
-            "name": "user",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
           },
+          "204": {
+            "description": "No Content"
+          },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/users": {
+      "get": {
+        "tags": ["users"],
+        "summary": "Request Trak resolve user profiles",
+        "description": "A request for Trak Resolve administrators to see user profile information.",
+        "produces": ["application/json"],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "401": {
             "description": "Unauthorized"
@@ -338,11 +402,11 @@
         }
       }
     },
-    "/api/v1/users": {
+    "/api/v1/users/devTeam": {
       "get": {
         "tags": ["users"],
-        "summary": "Request Trak resolve user profiles",
-        "description": "A request for Trak Resolve administrators to see user profile information.",
+        "summary": "Request Trak resolve devTeam profiles",
+        "description": "A request for Trak Resolve devTeam to see devTeam profile information.",
         "produces": ["application/json"],
         "parameters": [],
         "responses": {
@@ -393,6 +457,38 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/users/login": {
+      "post": {
+        "tags": ["users"],
+        "summary": "Trak resolve login system.",
+        "description": "A login system for Trak Resolve users.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
@@ -551,38 +647,6 @@
           },
           "500": {
             "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/api/v1/users/login": {
-      "post": {
-        "tags": ["users"],
-        "summary": "Trak resolve login system.",
-        "description": "A login system for Trak Resolve users.",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "email": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
           }
         }
       }
